Final code with observations

--- a/pymaceuticals.ipynb
+++ b/pymaceuticals.ipynb
@@ -10,7 +10,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- There is strong positive corralation between mouse weight and average tumor volume. As mouse weight increase, average tumor volume increases.\n",
+    "- The drug Capomulin showed the lowest final tumor volume among the drug regimens.\n",
+    "- The drug Capomulin showed a steady decline in tumor volume over time."
+   ]
   },
   {
    "cell_type": "code",
@@ -240,16 +244,16 @@
      "data": {
       "text/plain": [
        "g989    13\n",
-       "r944    10\n",
-       "e213    10\n",
-       "b559    10\n",
-       "a262    10\n",
+       "c758    10\n",
+       "j984    10\n",
+       "k894    10\n",
+       "h246    10\n",
        "        ..\n",
-       "n482     1\n",
        "d133     1\n",
-       "x226     1\n",
-       "o848     1\n",
+       "u153     1\n",
+       "f932     1\n",
        "v199     1\n",
+       "h428     1\n",
        "Name: Mouse ID, Length: 249, dtype: int64"
       ]
      },
@@ -711,17 +715,17 @@
     {
      "data": {
       "text/plain": [
-       "r944    10\n",
-       "a401    10\n",
-       "b559    10\n",
-       "a262    10\n",
-       "k862    10\n",
+       "c758    10\n",
+       "j119    10\n",
+       "k894    10\n",
+       "h246    10\n",
+       "x773    10\n",
        "        ..\n",
        "n482     1\n",
+       "t573     1\n",
+       "v199     1\n",
        "x226     1\n",
        "d133     1\n",
-       "f932     1\n",
-       "v199     1\n",
        "Name: Mouse ID, Length: 248, dtype: int64"
       ]
      },
@@ -908,18 +912,25 @@
     "# mean, median, variance, standard deviation, and SEM of the tumor volume. \n",
     "# Assemble the resulting series into a single summary dataframe.\n",
     "\n",
+    "# grouped results object\n",
     "results_group = results_cleaned.groupby(\"Drug Regimen\")\n",
     "\n",
+    "# calculate the mean\n",
     "tumor_mean = results_group[\"Tumor Volume (mm3)\"].mean()\n",
     "\n",
+    "# calculate the median\n",
     "tumor_median = results_group[\"Tumor Volume (mm3)\"].median()\n",
     "\n",
+    "# calculate the variance\n",
     "tumor_var = results_group[\"Tumor Volume (mm3)\"].var()\n",
     "\n",
+    "# calculate the standard deviation\n",
     "tumor_std = results_group[\"Tumor Volume (mm3)\"].std()\n",
     "\n",
+    "# calculate the standard error of the mean\n",
     "tumor_sem = results_group[\"Tumor Volume (mm3)\"].sem()\n",
     "\n",
+    "# create summary dataframe\n",
     "data_summary = pd.DataFrame({\"mean\": tumor_mean,\n",
     "                             \"median\": tumor_median,\n",
     "                             \"variance\": tumor_var,\n",
@@ -1112,8 +1123,14 @@
    ],
    "source": [
     "# Generate a bar plot showing the total number of measurements taken on each drug regimen using pandas.\n",
+    "\n",
+    "# get tumor volume count\n",
     "count_data = results_group[\"Tumor Volume (mm3)\"].count()\n",
+    "\n",
+    "# create bar chart using pandas\n",
     "count_chart = count_data.plot(kind=\"bar\")\n",
+    "\n",
+    "# add title and axis labels\n",
     "plt.title(\"Number of Measurements Taken for Each Drug Regimen\")\n",
     "plt.ylabel(\"Number of Measurements\")\n",
     "plt.show()"
@@ -1139,12 +1156,19 @@
    ],
    "source": [
     "# Generate a bar plot showing the total number of measurements taken on each drug regimen using pyplot.\n",
+    "\n",
+    "# grab drug names for labels\n",
     "drugs = count_data.keys()\n",
     "\n",
+    "# create bar chart using pyplot\n",
     "plt.bar(drugs, count_data, width=0.5)\n",
+    "\n",
+    "# add title and axis labels\n",
     "plt.title(\"Number of Measurements Taken for Each Drug Regimen\")\n",
     "plt.xlabel(\"Drug Regimen\")\n",
     "plt.ylabel(\"Number of Measurements\")\n",
+    "\n",
+    "# add drug names to x axis\n",
     "plt.xticks(drugs, rotation=\"vertical\")\n",
     "plt.show()"
    ]
@@ -1167,9 +1191,12 @@
    ],
    "source": [
     "# Generate a pie plot showing the distribution of female versus male mice using pandas\n",
+    "\n",
+    "# get count of mice grouped by sex\n",
     "mouse_sex_group = results_cleaned.groupby(\"Sex\")\n",
     "mouse_sex_count = mouse_sex_group[\"Sex\"].count()\n",
     "\n",
+    "# create pie chart using pandas\n",
     "mouse_sex_count.plot(kind=\"pie\", title=\"Distribution of Mouse Sex\", startangle=140, autopct=\"%1.1f%%\")\n",
     "plt.axis(\"equal\")\n",
     "plt.show()"
@@ -1193,9 +1220,14 @@
    ],
    "source": [
     "# Generate a pie plot showing the distribution of female versus male mice using pyplot\n",
+    "\n",
+    "# gather names for plot labels\n",
     "plot_labels = mouse_sex_count.keys()\n",
     "\n",
+    "# create pie chart using pyplot\n",
     "plt.pie(mouse_sex_count, labels=plot_labels, startangle=140, autopct=\"%1.1f%%\")\n",
+    "\n",
+    "# add title and labels\n",
     "plt.title(\"Distribution of Mouse Sex\")\n",
     "plt.ylabel(\"Sex\")\n",
     "plt.axis(\"equal\")\n",
@@ -1497,13 +1529,19 @@
     "final_tumor_vol\n",
     "\n",
     "    # Determine outliers using upper and lower bounds\n",
+    "\n",
+    "# lower and upper quartiles\n",
     "lowerq = final_tumor_vol.quantile(0.25)\n",
     "upperq = final_tumor_vol.quantile(0.75)\n",
+    "\n",
+    "# calculate inner quartile range\n",
     "iqr = upperq - lowerq\n",
     "\n",
+    "# calculate upper and lower bounds\n",
     "upper_bound = upperq + 1.5 * iqr\n",
     "lower_bound = lowerq - 1.5 * iqr\n",
     "\n",
+    "# find potential outliers\n",
     "outliers = final_tumor_vol[(final_tumor_vol < lower_bound) | (final_tumor_vol > upper_bound)]\n",
     "outliersdf = outliers.dropna(how=\"all\")\n",
     "outliersdf"
@@ -1529,8 +1567,14 @@
    ],
    "source": [
     "# Generate a box plot of the final tumor volume of each mouse across four regimens of interest\n",
+    "\n",
+    "# create parameters for changing the outlier symbology\n",
     "red_circle = dict(markerfacecolor=\"red\", marker=\"o\", markersize=10)\n",
+    "\n",
+    "# create box plot\n",
     "plt.boxplot(tumor_vol_data, flierprops=red_circle)\n",
+    "\n",
+    "# add title and labels\n",
     "plt.title(\"Boxplot Comparing Drug Regimens\")\n",
     "tick_locations = [1, 2, 3, 4]\n",
     "plt.xticks(tick_locations, treatment_list)\n",
@@ -1565,9 +1609,17 @@
    ],
    "source": [
     "# Generate a line plot of tumor volume vs. time point for a mouse treated with Capomulin\n",
+    "\n",
+    "# choose mouse id treated with Capomulin\n",
     "mouseID = \"s185\"\n",
+    "\n",
+    "# gather data for line plot\n",
     "line_plot_data = results_cleaned.loc[results_cleaned[\"Mouse ID\"] == mouseID, :]\n",
+    "\n",
+    "# create line plot\n",
     "line_plot_data.plot(\"Timepoint\", \"Tumor Volume (mm3)\")\n",
+    "\n",
+    "# add title and labels\n",
     "plt.ylabel(\"Tumor Volume (mm3)\")\n",
     "plt.title(f\"Tumer Volume vs. Time for Mouse ID: {mouseID}\")\n",
     "plt.show()"
@@ -1593,9 +1645,15 @@
    ],
    "source": [
     "# Generate a scatter plot of average tumor volume vs. mouse weight for the Capomulin regimen\n",
+    "\n",
+    "# gather data for scatter plot\n",
     "scatter_plot_group = results_cleaned.loc[results_cleaned[\"Drug Regimen\"] == \"Capomulin\", :].groupby(\"Mouse ID\")\n",
     "scatter_plot_data = scatter_plot_group.mean()\n",
+    "\n",
+    "# create scatter plot\n",
     "scatter_plot_data.plot(\"Weight (g)\", \"Tumor Volume (mm3)\", kind=\"scatter\")\n",
+    "\n",
+    "# add title and labels\n",
     "plt.ylabel(\"Avg Tumor Volume (mm3)\")\n",
     "plt.title(\"Average Tumor Volume vs. Mouse Weight\")\n",
     "plt.show()"
@@ -1625,9 +1683,11 @@
     "# Calculate the correlation coefficient and linear regression model \n",
     "# for mouse weight and average tumor volume for the Capomulin regimen\n",
     "\n",
+    "# gather data for correlation\n",
     "weight = scatter_plot_data.loc[:, \"Weight (g)\"]\n",
     "volume = scatter_plot_data.loc[:, \"Tumor Volume (mm3)\"]\n",
     "\n",
+    "# calculate correaltion\n",
     "correlation = st.pearsonr(weight, volume)\n",
     "print(f\"The correlation between mouse weight and tumor volume is {round(correlation[0],2)}\")"
    ]
@@ -1658,19 +1718,37 @@
     }
    ],
    "source": [
+    "# perform linear regression\n",
+    "\n",
+    "# set x and y values\n",
     "x_values = weight\n",
     "y_values = volume\n",
+    "\n",
+    "# perform regression\n",
     "(slope, intercept, rvalue, pvalue, stderr) = st.linregress(x_values, y_values) # x values in first\n",
-    "regress_values = x_values * slope + intercept \n",
+    "\n",
+    "# calculate regression values for chart\n",
+    "regress_values = x_values * slope + intercept\n",
+    "\n",
+    "# create line equation string\n",
     "line_eq = \"y = \" + str(round(slope,2)) + \"x + \" + str(round(intercept,2))\n",
+    "\n",
+    "# create scatter plot and regression line plot\n",
     "plt.scatter(x_values,y_values)\n",
     "plt.plot(x_values,regress_values,\"r-\")\n",
+    "\n",
+    "# add title and labels\n",
     "plt.xlabel(\"Weight (g)\")\n",
     "plt.ylabel(\"Avg Tumor Volume (mm3)\")\n",
     "plt.title(\"Scatter Plot with Linear Regression\")\n",
+    "\n",
+    "# add equation string to plot\n",
     "plt.annotate(line_eq,(21, 36),fontsize=12,color=\"red\")\n",
+    "\n",
+    "# calculate r squared value and print\n",
     "r_squared = round(rvalue**2, 2)\n",
     "print(f\"The r squared value is {r_squared}\")\n",
+    "\n",
     "plt.show()"
    ]
   },
